0.05

0.04 (August 26, 2012)
- Add PEK CPAN account.

0.03 (August 07, 2012)
- Add JSPICAK CPAN account.

0.02 (August 06, 2012)
- Add missing prereq. Perl module to Makefile.PL.

0.01 (August 05, 2012)
- First version.