@@ -17,6 +17,7 @@ resources 'homepage' => 'https://github.com/tupinek/Acme-CPANAuthors-Czech';
 resources 'repository' => 'git://github.com/tupinek/Acme-CPANAuthors-Czech';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
+test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::Pod' => 0;
 test_requires 'Test::Pod::Coverage' => 0;
