@@ -3,7 +3,8 @@ use strict;
 use warnings;
 
 # Modules.
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 3;
+use Test::NoWarnings;
 
 BEGIN {
 
