@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Acme::CPANAuthors::Czech;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 is($Acme::CPANAuthors::Czech::VERSION, 0.05, 'Version.');
