@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Acme::CPANAuthors;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 my $obj = Acme::CPANAuthors->new('Czech');
