@@ -5,7 +5,8 @@ use warnings;
 
 # Modules.
 use Acme::CPANAuthors::Czech;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 my %ret = Acme::CPANAuthors::Czech->authors;
