@@ -1,4 +1,5 @@
 0.05
+- Add Test::NoWarnings to tests.
 
 0.04 (August 26, 2012)
 - Add PEK CPAN account.
